--- a/hearts-and-minds/css/style.css
+++ b/hearts-and-minds/css/style.css
@@ -125,122 +125,7 @@ img {
 ul, ol {
   padding: 0 0 20px 25px; }
 
-.a-icon {
-  width: 0.8em;
-  align-self: center;
-  color: #ffffff;
-  display: inline-block;
-  margin-right: 3px; }
-
-.a-image img {
-  max-width: 100%;
-  width: 100%; }
-
-.a-logo {
-  max-width: 100%; }
-
-.a-menu-link {
-  color: #575757;
-  padding: 8px 4px;
-  text-decoration: none; }
-
-.a-menu-link:hover {
-  border-bottom: 4px solid #DA3832; }
-
-.m-logo-link {
-  max-width: 250px;
-  padding-right: 10px; }
-  .m-logo-link:focus {
-    outline-offset: 6px; }
-
-@media screen and (min-width: 400px) {
-  .m-logo-link {
-    max-width: 280px; } }
-
-@media screen and (min-width: 500px) {
-  .m-logo-link {
-    max-width: 300px; } }
-
-@media screen and (min-width: 800px) {
-  .m-logo-link {
-    max-width: none; } }
-
-.m-navigation {
-  align-self: center;
-  margin-left: auto;
-  padding-top: 20px;
-  width: 100%; }
-
-.m-navigation__menu-button {
-  display: none;
-  border: none;
-  border-top: 3px solid #da3832;
-  background: none;
-  cursor: pointer;
-  font-size: 0.8rem;
-  margin-left: auto;
-  margin-right: 10px;
-  margin-top: 10px;
-  min-height: 55px;
-  padding: 10px 0 2px;
-  position: relative; }
-  .m-navigation__menu-button:before {
-    border-top: 3px solid #da3832;
-    border-bottom: 3px solid #da3832;
-    content: "";
-    height: 4px;
-    position: absolute;
-    top: 4px;
-    width: 100%;
-    left: 0;
-    right: 0;
-    margin: auto; }
-
-.m-navigation__list {
-  display: flex;
-  flex-wrap: wrap;
-  list-style-type: none;
-  margin: 0;
-  padding: 10px 0; }
-
-.m-navigation__list-item {
-  padding: 10px 15px;
-  width: 100%; }
-  .m-navigation__list-item .m-button {
-    margin-top: -5px; }
-
-.js .m-navigation {
-  width: auto; }
-
-.js .m-navigation__menu-button {
-  display: block; }
-
-.m-navigation--footer {
-  background: #282828; }
-  .m-navigation--footer .m-navigation__list {
-    display: flex;
-    justify-content: center; }
-  .m-navigation--footer .m-navigation__list-item a {
-    color: #ffffff; }
-
-@media screen and (min-width: 500px) {
-  .m-navigation__menu-button {
-    font-size: 1rem; } }
-
-@media screen and (min-width: 800px) {
-  .m-navigation__list-item {
-    width: auto; } }
-
-@media screen and (min-width: 1200px) {
-  .m-navigation {
-    padding-top: 0;
-    width: auto; }
-  .js .m-navigation__menu-button {
-    display: none; }
-  .js .m-navigation__list {
-    display: flex; } }
-
-.m-button {
+.a-button {
   align-self: center;
   background: #DA3832;
   border: none;
@@ -252,42 +137,43 @@ ul, ol {
   margin: 0;
   padding: 10px 15px;
   text-decoration: none; }
-  .m-button a {
+  .a-button a {
     color: #ffffff; }
 
-.m-button:hover {
+.a-button:hover {
   background: darkred;
   text-decoration: underline; }
 
-.m-button:focus {
+.a-button:focus {
   background: darkred;
   outline-offset: 3px; }
 
-.m-button--lg {
+.a-button--lg {
   border-radius: 12px;
   padding: 16px 20px 16px 15px;
   font-size: 1.2rem; }
 
-.m-footer-navigation {
+.a-icon {
+  width: 0.8em;
   align-self: center;
-  background: #282828;
-  margin-left: auto; }
+  color: #ffffff;
+  display: inline-block;
+  margin-right: 3px; }
 
-.m-footer-navigation__list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  list-style-type: none;
-  margin: 0;
-  padding: 10px; }
+.a-image img {
+  max-width: 100%;
+  width: 100%; }
 
-.m-footer-navigation__list-item {
-  padding: 2px 20px; }
-  .m-footer-navigation__list-item a {
-    color: #ffffff;
-    text-decoration: underline; }
-    .m-footer-navigation__list-item a:hover {
-      text-decoration: none; }
+.a-menu-link {
+  color: #575757;
+  padding: 8px 4px;
+  text-decoration: none; }
+
+.a-menu-link:hover {
+  border-bottom: 4px solid #DA3832; }
+
+.a-logo {
+  max-width: 100%; }
 
 .m-card {
   box-shadow: 0 5px 15px rgba(176, 176, 176, 0.5);
@@ -307,6 +193,151 @@ ul, ol {
   .m-card .m-card__link {
     margin: auto 15px 20px; }
 
+.m-footer-navigation {
+  align-self: center;
+  background: #282828;
+  margin-left: auto; }
+
+.m-footer-navigation__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  list-style-type: none;
+  margin: 0;
+  padding: 10px; }
+  .m-footer-navigation__list .m-footer-navigation__list-item:not(:last-child):after {
+    content: '';
+    border-right: 1px solid white;
+    padding-right: 20px; }
+
+.m-footer-navigation__list-item {
+  padding: 2px 20px 2px 5px; }
+  .m-footer-navigation__list-item:not(:last-child):after {
+    content: '';
+    border-right: 1px solid white;
+    padding-right: 10px; }
+  .m-footer-navigation__list-item a {
+    color: #ffffff;
+    text-decoration: underline; }
+    .m-footer-navigation__list-item a:hover {
+      text-decoration: none; }
+
+.js .m-global-navigation {
+  width: auto; }
+
+.js .m-global-navigation__menu-button {
+  display: block; }
+
+.m-global-navigation {
+  align-self: center;
+  margin-left: auto;
+  padding-top: 20px;
+  width: 100%; }
+
+.m-global-navigation__menu-button {
+  display: none;
+  border: none;
+  border-top: 3px solid #da3832;
+  background: none;
+  cursor: pointer;
+  font-size: 0.8rem;
+  margin-left: auto;
+  margin-right: 10px;
+  margin-top: 10px;
+  min-height: 55px;
+  padding: 10px 0 2px;
+  position: relative; }
+  .m-global-navigation__menu-button:before {
+    border-top: 3px solid #da3832;
+    border-bottom: 3px solid #da3832;
+    content: "";
+    height: 4px;
+    position: absolute;
+    top: 4px;
+    width: 100%;
+    left: 0;
+    right: 0;
+    margin: auto; }
+
+.m-global-navigation__list {
+  display: flex;
+  flex-wrap: wrap;
+  list-style-type: none;
+  margin: 0;
+  padding: 10px 0; }
+
+.m-global-navigation__list-item {
+  padding: 10px 15px;
+  width: 100%; }
+  .m-global-navigation__list-item .a-button {
+    margin-top: -5px; }
+
+@media screen and (min-width: 500px) {
+  .m-global-navigation__menu-button {
+    font-size: 1rem; } }
+
+@media screen and (min-width: 800px) {
+  .m-global-navigation__list-item {
+    width: auto; } }
+
+@media screen and (min-width: 1200px) {
+  .m-global-navigation {
+    padding-top: 0;
+    width: auto; }
+  .js .m-global-navigation__menu-button {
+    display: none; }
+  .js .m-global-navigation__list {
+    display: flex; } }
+
+.m-logo-link {
+  max-width: 250px;
+  padding-right: 10px; }
+  .m-logo-link:focus {
+    outline-offset: 6px; }
+
+@media screen and (min-width: 400px) {
+  .m-logo-link {
+    max-width: 280px; } }
+
+@media screen and (min-width: 500px) {
+  .m-logo-link {
+    max-width: 300px; } }
+
+@media screen and (min-width: 800px) {
+  .m-logo-link {
+    max-width: none; } }
+
+.m-skip-links {
+  left: 0;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 0;
+  z-index: 999; }
+
+.m-skip-links__link {
+  background: #ffffff;
+  color: #575757;
+  height: 0;
+  left: 0;
+  overflow: hidden;
+  position: absolute;
+  text-decoration: underline;
+  top: 0;
+  width: 0; }
+
+.m-skip-links__link:focus {
+  border: 3px dashed #da3832;
+  height: auto;
+  left: 10px;
+  overflow: auto;
+  padding: 10px;
+  top: 10px;
+  width: auto; }
+
+.keypress .m-skip-links__link:focus {
+  outline: none; }
+
 .m-team-member {
   text-align: center;
   padding: 20px; }
@@ -317,26 +348,9 @@ ul, ol {
   width: 150px;
   margin: 10px auto; }
 
-.o-header {
-  border-bottom: 1px solid #F2F2F2;
-  padding: 0; }
-
-.o-header__content {
-  align-items: center;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  max-width: 1440px;
-  margin: 0 auto;
-  padding: 10px; }
-
-@media screen and (min-width: 500px) {
-  .o-header__content {
-    padding: 20px; } }
-
-@media screen and (min-width: 800px) {
-  .o-header {
-    padding: 1em 0; } }
+.o-blog-hero {
+  background: #da3832;
+  color: #ffffff; }
 
 .o-cards {
   display: flex;
@@ -401,6 +415,43 @@ ul, ol {
   .o-footer__col {
     width: 33.333333%; } }
 
+.o-header {
+  border-bottom: 1px solid #F2F2F2;
+  padding: 0; }
+
+.o-header__content {
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 10px; }
+
+@media screen and (min-width: 500px) {
+  .o-header__content {
+    padding: 20px; } }
+
+@media screen and (min-width: 800px) {
+  .o-header {
+    padding: 1em 0; } }
+
+.t-blog-article-content,
+.t-blog-article-latest {
+  width: 100%; }
+
+@media screen and (min-width: 768px) {
+  .t-blog-article-content {
+    width: 60%; }
+  .t-blog-article-latest {
+    width: 40%; } }
+
+.t-left-content {
+  max-width: 840px; }
+
+.t-right-content {
+  max-width: 600px; }
+
 .t-full-width {
   max-width: 1440px;
   margin: 0 auto;
@@ -409,12 +460,6 @@ ul, ol {
 @media screen and (min-width: 500px) {
   .t-full-width {
     padding: 20px; } }
-
-.t-left-content {
-  max-width: 840px; }
-
-.t-right-content {
-  max-width: 600px; }
 
 .t-3-col-flex {
   display: flex; }
