--- a/hearts-and-minds/style.css
+++ b/hearts-and-minds/style.css
@@ -2,7 +2,7 @@
 /*
 Theme Name: Hearts and Minds
 Theme URI: https://www.heartsminds.org.uk/
-Author: Dan Elder
+Author: Hearts and Minds
 Author URI: https://www.heartsminds.org.uk/
 Description: The Hearts and Minds Wordpress theme
 Version: 1.0.0
