--- a/hearts-and-minds/style.css
+++ b/hearts-and-minds/style.css
@@ -60,21 +60,21 @@ figure {
 
 @font-face {
     font-family: 'OpenSans-Regular';
-    src: url("fonts/OpenSans-Regular.woff") format("woff");
+    src: url("assets/fonts/OpenSans-Regular.woff") format("woff");
     font-weight: normal;
     font-style: normal
 }
 
 @font-face {
     font-family: 'OpenSans-Bold';
-    src: url("fonts/OpenSans-Bold.woff") format("woff");
+    src: url("assets/fonts/OpenSans-Bold.woff") format("woff");
     font-weight: normal;
     font-style: normal
 }
 
 @font-face {
     font-family: 'OpenSans-Light';
-    src: url("fonts/OpenSans-Light.woff") format("woff");
+    src: url("assets/fonts/OpenSans-Light.woff") format("woff");
     font-weight: normal;
     font-style: normal
 }
@@ -256,7 +256,7 @@ blockquote p,
 blockquote p:before,
 .c-blockquote__text:before {
     background-color: #da3832;
-    background-image: url("images/icons/quotes.svg");
+    background-image: url("assets/images/icons/quotes.svg");
     background-position: center center;
     background-repeat: no-repeat;
     border-radius: 50%;
@@ -338,6 +338,34 @@ blockquote p:before,
     width: 100%
 }
 
+.c-card .c-card__image {
+    height: 0;
+    overflow: hidden;
+    padding-top: 66%;
+    background: white;
+    position: relative;
+}
+
+.c-card .c-card__image--blog {
+    padding-top: 52%;
+}
+
+.c-card .c-card__image--narrow {
+    padding-top: 30%;
+}
+
+.c-card .c-card__image--values {
+    padding-top: 60%;
+}
+
+.c-card .c-card__image img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 .c-card .c-card__text {
     color: #575757;
     padding: 18px 20px;
@@ -380,7 +408,8 @@ blockquote p:before,
 }
 
 .c-cards--our-values .c-card {
-    box-shadow: none
+    box-shadow: none;
+    display: block;
 }
 
 .c-cards--our-values .c-card .c-card__image {
@@ -607,6 +636,10 @@ blockquote p:before,
     margin: 20px;
     padding: 20px;
     position: relative
+}
+
+.c-quote:not(:last-child) {
+    margin-bottom: 40px;
 }
 
 .c-quote:after {
